--- a/sote/Guide.html
+++ b/sote/Guide.html
@@ -15,11 +15,11 @@
 			<center><img src="img/map.jpg" width="400" height="400"><img src="img/spaceview.jpg" width="400" height="400"></center></li>
 			<li>Историческая справка:<br>Санкт-Петербург был основан по приказу российского императора Петра I 16 мая 1703 года. В течение первых десяти лет своего существования город имел значение, прежде всего, как крепость и морской порт, но благодаря оживленной торговле он достаточно быстро превратился в богатый экономический центр с развитой промышленностью и ремеслами.</li>
 			<li>Фотогралерея:<br>
-				<img src="img/1.jfif" width="500">
-				<img src="img/2.jpg" width="500">
-				<img src="img/3.jpg" width="500">
-				<img src="img/4.jfif" width="500">
-				<img src="img/5.jpg" width="500"></li>
+				<img src="img/1.jfif" width="500" height="500">
+				<img src="img/2.jpg" width="500" height="500"> 
+				<img src="img/3.jpg" width="500" height="500">
+				<img src="img/4.jfif" width="500" height="500">
+				<img src="img/5.jpg" width="500" height="500"></li>
 			<li>Достопримечательности города:
 				<table border="1" width="70%">
 					<tbody>
